did some clean up

--- a/views/project/index.ejs
+++ b/views/project/index.ejs
@@ -7,9 +7,9 @@
     <div class="text-center">
       <span
         class="splitTextStyleTwo text-main-600 border-bottom border-main-600 fst-italic fw-bold tw-text-lg cursor-small"
-        >Projects</span
+        >Our Projects</span
       >
-      <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big">Projects</h1>
+      <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big">Successful Deliveries</h1>
     </div>
   </div>
 </section>
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="masonry-layout d-flex flex-wrap gap-4">
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="service-details.html" class="w-100 h-100">
+        <a href="project-details.html" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img1.png"
             class="w-100 h-100 object-fit-cover"
@@ -41,14 +41,14 @@
             <a
               href="project-details.html"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
-              >Professional Website Design</a
+              >Ocean Freight Services</a
             >
           </h4>
-          <span class="text-white cursor-small">Web Design & Development</span>
+          <span class="text-white cursor-small">Express Air Delivery</span>
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="service-details.html" class="w-100 h-100">
+        <a href="project-details.html" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img2.png"
             class="w-100 h-100 object-fit-cover"
@@ -69,14 +69,14 @@
             <a
               href="project-details.html"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
-              >Professional Website Design</a
+              >International Air Freight</a
             >
           </h4>
-          <span class="text-white cursor-small">Web Design & Development</span>
+          <span class="text-white cursor-small">Maritime Logistics</span>
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="service-details.html" class="w-100 h-100">
+        <a href="project-details.html" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img3.png"
             class="w-100 h-100 object-fit-cover"
@@ -97,14 +97,14 @@
             <a
               href="project-details.html"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
-              >Professional Website Design</a
+              >Warehousing Solutions</a
             >
           </h4>
-          <span class="text-white cursor-small">Web Design & Development</span>
+          <span class="text-white cursor-small">Storage & Distribution</span>
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="service-details.html" class="w-100 h-100">
+        <a href="project-details.html" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img4.png"
             class="w-100 h-100 object-fit-cover"
@@ -125,14 +125,14 @@
             <a
               href="project-details.html"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
-              >Professional Website Design</a
+              >Ground Transportation</a
             >
           </h4>
-          <span class="text-white cursor-small">Web Design & Development</span>
+          <span class="text-white cursor-small">Road Freight Services</span>
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="service-details.html" class="w-100 h-100">
+        <a href="project-details.html" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img5.png"
             class="w-100 h-100 object-fit-cover"
@@ -153,14 +153,14 @@
             <a
               href="project-details.html"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
-              >Professional Website Design</a
+              >Express Courier Service</a
             >
           </h4>
-          <span class="text-white cursor-small">Web Design & Development</span>
+          <span class="text-white cursor-small">Same-Day Delivery</span>
         </div>
       </div>
       <div class="position-relative hover-overlay overlay-main-600 group-item">
-        <a href="service-details.html" class="w-100 h-100">
+        <a href="project-details.html" class="w-100 h-100">
           <img
             src="assets/images/thumbs/project-two-img6.png"
             class="w-100 h-100 object-fit-cover"
@@ -181,10 +181,10 @@
             <a
               href="project-details.html"
               class="text-white hover--translate-y-1 hover-text-white cursor-big splitTextStyleOne"
-              >Professional Website Design</a
+              >Custom Logistics Solutions</a
             >
           </h4>
-          <span class="text-white cursor-small">Web Design & Development</span>
+          <span class="text-white cursor-small">Specialized Transport</span>
         </div>
       </div>
     </div>
