--- a/views/team/index.ejs
+++ b/views/team/index.ejs
@@ -181,7 +181,7 @@
           <div class="text-center tw-mt-6">
             <h5 class="tw-mb-1 cursor-big">
               <a href="/team/2" class="hover-text-main-600 line-clamp-1"
-                >Sarah Johnson</a
+                >Klaus Weber</a
               >
             </h5>
             <span class="tw-text-sm text-main-600 text-uppercase cursor-small"
