--- a/views/layouts/nav-home.ejs
+++ b/views/layouts/nav-home.ejs
@@ -10,8 +10,8 @@
   </button>
 
   <div class="mobile-menu__inner">
-    <a href="index.html" class="mobile-menu__logo">
-      <img src="assets/images/logo/logo2.png" alt="Logo" />
+    <a href="/" class="mobile-menu__logo">
+      <img src="/assets/images/logo/logo2.png" alt="Logo" />
     </a>
     <div class="mobile-menu__menu">
       <!-- Nav menu Start -->
