--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,130 +1,129 @@
- <!-- ==================== Breadcrumb Start Here ==================== -->
- <section class="breadcrumb py-140 tw-pt-206-px mb-0 bg-img" data-background-image="assets/images/thumbs/breadcrumb-bg.png">
+<!-- ==================== Breadcrumb Start Here ==================== -->
+<section class="breadcrumb py-140 tw-pt-206-px mb-0 bg-img" data-background-image="assets/images/thumbs/breadcrumb-bg.png">
   <div class="container">
       <div class="text-center">
-          <span class="splitTextStyleTwo text-main-600 border-bottom border-main-600 fst-italic fw-bold tw-text-lg cursor-small">Blog Details</span>
-          <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big"> Blog Details</h1>
+          <span class="splitTextStyleTwo text-main-600 border-bottom border-main-600 fst-italic fw-bold tw-text-lg cursor-small">Contact DXpress</span>
+          <h1 class="splitTextStyleOne text-white tw-mt-1 cursor-big">Get in Touch</h1>
       </div>
   </div>
 </section>
 <!-- ==================== Breadcrumb End Here ==================== -->
 
-  <!-- =============================== Contact Page section start =============================== -->
-  <section class="py-140">
-      <div class="container">
-          <div class="row gy-5">
-              <div class="col-lg-6">
-                  <div class="">
-                      <div class="">
-                          <span class="splitTextStyleTwo cursor-small tw-text-xl fw-bold fst-italic text-decoration-underline text-main-600 tw-mb-305">Get In Touch</span>
-                          <h1 class="splitTextStyleOne cursor-big tw-mb-4">Contact Us</h1>
-                          <p class="cursor-small text-neutral-900">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque inventore</p>
-                      </div>
-                      <div class="xs-grid-cols-2 d-grid tw-mt-16 tw-gap-74-px">
-                          <div class="d-flex align-items-start tw-gap-6">
-                              <span class="tw-text-3xl text-main-600 d-flex cursor-small">
-                                  <i class="ph-bold ph-map-pin"></i>
-                              </span>
-                              <div class="">
-                                  <h6 class="tw-mb-4 cursor-big">Location</h6>
-                                  <p class="text-neutral-1000 cursor-small">55 Main street, 2nd block, Melbourne, Australia</p>
-                              </div>
-                          </div>
-                          <div class="d-flex align-items-start tw-gap-6">
-                              <span class="tw-text-3xl text-main-600 d-flex cursor-small">
-                                  <i class="ph-bold ph-phone"></i>
-                              </span>
-                              <div class="">
-                                  <h6 class="tw-mb-4 cursor-big">Phone</h6>
-                                  <a href="tel:+1(368)5678954" class="text-neutral-1000 hover-text-main-600 cursor-big">+1 (368) 567 89 54</a>
-                                  <a href="tel:+236(456)89622" class="text-neutral-1000 hover-text-main-600 cursor-big tw-mt-1">+236 (456) 896 22</a>
-                              </div>
-                          </div>
-                          <div class="d-flex align-items-start tw-gap-6">
-                              <span class="tw-text-3xl text-main-600 d-flex cursor-small">
-                                  <i class="ph-bold ph-envelope-simple"></i>
-                              </span>
-                              <div class="">
-                                  <h6 class="tw-mb-4 cursor-big">Location</h6>
-                                  <a href="mailto:wiatechinfo@gmail.com" class="text-neutral-1000 hover-text-main-600 cursor-big">wiatechinfo@gmail.com</a>
-                                  <a href="mailto:www.wiatech.com" class="text-neutral-1000 hover-text-main-600 cursor-big">www.wiatech.com</a>
-                              </div>
-                          </div>
-                          <div class="d-flex align-items-start tw-gap-6">
-                              <span class="tw-text-3xl text-main-600 d-flex cursor-small">
-                                  <i class="ph-bold ph-share-network"></i>
-                              </span>
-                              <div class="">
-                                  <h6 class="tw-mb-4 cursor-big">Social</h6>
-                                  <ul class="cursor-small d-flex align-items-center tw-gap-3 justify-content-center tw-mt-6">
-                                      <li>
-                                          <a href="https://www.facebook.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
-                                              <i class="ph ph-facebook-logo"></i>
-                                          </a>
-                                      </li>
-                                      <li>
-                                          <a href="https://www.twitter.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
-                                              <i class="ph ph-x-logo"></i>
-                                          </a>
-                                      </li>
-                                      <li>
-                                          <a href="https://www.instagram.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
-                                              <i class="ph ph-instagram-logo"></i>
-                                          </a>
-                                      </li>
-                                      <li>
-                                          <a href="https://www.youtube.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
-                                              <i class="ph ph-youtube-logo"></i>
-                                          </a>
-                                      </li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-lg-6">
-                  <div class="bg-neutral-50 py-60 tw-px-54-px">
-                      <h3 class="tw-mb-4 cursor-big">Fill Up The Form</h3>
-                      <p class="text-neutral-1000 cursor-small max-w-444-px">Your email address will not be published. Required fields are marked *</p>
-                      <form action="contact.html#" class="tw-mt-70-px d-flex flex-column tw-gap-64-px">
-                          <div class="position-relative">
-                              <input type="text" class="cursor-small focus-outline-0 bg-transparent border-0 tw-pb-5 tw-ps-9 w-100 border-bottom border-neutral-200 focus-border-main-600" placeholder="Your Name*" required >
-                              <span class="tw-text-xl d-flex text-main-two-600 position-absolute top-0 tw-start-0">
-                                  <i class="ph-bold ph-user"></i>
-                              </span>
-                          </div>
-                          <div class="position-relative">
-                              <input type="email" class="cursor-small focus-outline-0 bg-transparent border-0 tw-pb-5 tw-ps-9 w-100 border-bottom border-neutral-200 focus-border-main-600" placeholder="Email Address*" required >
-                              <span class="tw-text-xl d-flex text-main-two-600 position-absolute top-0 tw-start-0">
-                                  <i class="ph-bold ph-envelope"></i>
-                              </span>
-                          </div>
-                          <div class="position-relative">
-                              <textarea class="cursor-small focus-outline-0 bg-transparent border-0 tw-pb-5 tw-ps-9 w-100 border-bottom border-neutral-200 focus-border-main-600 tw-h-108-px" placeholder="Enter Your Message here"></textarea>
-                              <span class="tw-text-xl d-flex text-main-two-600 position-absolute top-0 tw-start-0">
-                                  <i class="ph-bold ph-note-pencil"></i>
-                              </span>
-                          </div>
-                          <div class="">
-                              <button type="submit" class="cursor-small btn btn-main hover-style-one button--stroke d-inline-flex align-items-center justify-content-center tw-gap-5 group active--translate-y-2 rounded-0" data-block="button">
-                                  <span class="button__flair"></span>
-                                  <span class="text-white tw-text-2xl group-hover-text-white tw-duration-500 position-relative">
-                                      <i class="ph-bold ph-paper-plane-tilt"></i>
-                                  </span>
-                                  <span class="button__label">Get In Touch</span>
-                              </button>
-                          </div>
-                      </form>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-  <!-- =============================== Contact Page section End =============================== -->
+<!-- =============================== Contact Page section start =============================== -->
+<section class="py-140">
+    <div class="container">
+        <div class="row gy-5">
+            <div class="col-lg-6">
+                <div class="">
+                    <div class="">
+                        <span class="splitTextStyleTwo cursor-small tw-text-xl fw-bold fst-italic text-decoration-underline text-main-600 tw-mb-305">Connect With Us</span>
+                        <h1 class="splitTextStyleOne cursor-big tw-mb-4">Let's Discuss Your Logistics Needs</h1>
+                        <p class="cursor-small text-neutral-900">Ready to optimize your supply chain? Our logistics experts are here to provide tailored solutions for your business requirements.</p>
+                    </div>
+                    <div class="xs-grid-cols-2 d-grid tw-mt-16 tw-gap-74-px">
+                        <div class="d-flex align-items-start tw-gap-6">
+                            <span class="tw-text-3xl text-main-600 d-flex cursor-small">
+                                <i class="ph-bold ph-map-pin"></i>
+                            </span>
+                            <div class="">
+                                <h6 class="tw-mb-4 cursor-big">Our Location</h6>
+                                <p class="text-neutral-1000 cursor-small">59 Irthlingborough Road East<br>Wellingborough<br>Northamptonshire<br>NN8 1GP</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-start tw-gap-6">
+                            <span class="tw-text-3xl text-main-600 d-flex cursor-small">
+                                <i class="ph-bold ph-phone"></i>
+                            </span>
+                            <div class="">
+                                <h6 class="tw-mb-4 cursor-big">Call Us</h6>
+                                <a href="tel:+447506323070" class="text-neutral-1000 hover-text-main-600 cursor-big">+44 7506 323070</a>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-start tw-gap-6">
+                            <span class="tw-text-3xl text-main-600 d-flex cursor-small">
+                                <i class="ph-bold ph-envelope-simple"></i>
+                            </span>
+                            <div class="">
+                                <h6 class="tw-mb-4 cursor-big">Email Us</h6>
+                                <a href="mailto:info@dxpress.com" class="text-neutral-1000 hover-text-main-600 cursor-big">info@dxpress.com</a>
+                                <a href="https://www.dxpress.com" class="text-neutral-1000 hover-text-main-600 cursor-big">www.dxpress.com</a>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-start tw-gap-6">
+                            <span class="tw-text-3xl text-main-600 d-flex cursor-small">
+                                <i class="ph-bold ph-share-network"></i>
+                            </span>
+                            <div class="">
+                                <h6 class="tw-mb-4 cursor-big">Follow Us</h6>
+                                <ul class="cursor-small d-flex align-items-center tw-gap-3 justify-content-center tw-mt-6">
+                                    <li>
+                                        <a href="https://www.facebook.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
+                                            <i class="ph ph-facebook-logo"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.twitter.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
+                                            <i class="ph ph-x-logo"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.instagram.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
+                                            <i class="ph ph-instagram-logo"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com" class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200">
+                                            <i class="ph ph-youtube-logo"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="bg-neutral-50 py-60 tw-px-54-px">
+                    <h3 class="tw-mb-4 cursor-big">Send Us a Message</h3>
+                    <p class="text-neutral-1000 cursor-small max-w-444-px">We aim to respond to all inquiries within 24 hours. Required fields are marked *</p>
+                    <form action="contact.html#" class="tw-mt-70-px d-flex flex-column tw-gap-64-px">
+                        <div class="position-relative">
+                            <input type="text" class="cursor-small focus-outline-0 bg-transparent border-0 tw-pb-5 tw-ps-9 w-100 border-bottom border-neutral-200 focus-border-main-600" placeholder="Your Name*" required >
+                            <span class="tw-text-xl d-flex text-main-two-600 position-absolute top-0 tw-start-0">
+                                <i class="ph-bold ph-user"></i>
+                            </span>
+                        </div>
+                        <div class="position-relative">
+                            <input type="email" class="cursor-small focus-outline-0 bg-transparent border-0 tw-pb-5 tw-ps-9 w-100 border-bottom border-neutral-200 focus-border-main-600" placeholder="Email Address*" required >
+                            <span class="tw-text-xl d-flex text-main-two-600 position-absolute top-0 tw-start-0">
+                                <i class="ph-bold ph-envelope"></i>
+                            </span>
+                        </div>
+                        <div class="position-relative">
+                            <textarea class="cursor-small focus-outline-0 bg-transparent border-0 tw-pb-5 tw-ps-9 w-100 border-bottom border-neutral-200 focus-border-main-600 tw-h-108-px" placeholder="How can we help you?"></textarea>
+                            <span class="tw-text-xl d-flex text-main-two-600 position-absolute top-0 tw-start-0">
+                                <i class="ph-bold ph-note-pencil"></i>
+                            </span>
+                        </div>
+                        <div class="">
+                            <button type="submit" class="cursor-small btn btn-main hover-style-one button--stroke d-inline-flex align-items-center justify-content-center tw-gap-5 group active--translate-y-2 rounded-0" data-block="button">
+                                <span class="button__flair"></span>
+                                <span class="text-white tw-text-2xl group-hover-text-white tw-duration-500 position-relative">
+                                    <i class="ph-bold ph-paper-plane-tilt"></i>
+                                </span>
+                                <span class="button__label">Send Message</span>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- =============================== Contact Page section End =============================== -->
 
-  <!-- ========================== map Start ============================ -->
+<!-- ========================== map Start ============================ -->
 <div class="map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5591642.125572935!2d-118.45027922609367!3d46.81821123121407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5343f19fafa367dd%3A0xe0a08a08122c4da1!2sHelena-Lewis%20and%20Clark%20National%20Forest!5e0!3m2!1sen!2sbd!4v1731480188813!5m2!1sen!2sbd" class="w-100" height="355" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2446.7127073290347!2d-0.6761891237499595!3d52.17859337189377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4877b1eb5a6b2667%3A0x5c5e8a6c1c7e41d9!2s59%20Irthlingborough%20Rd%20E%2C%20Wellingborough%20NN8%201GP%2C%20UK!5e0!3m2!1sen!2s!4v1701234567890!5m2!1sen!2s" class="w-100" height="355" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 <!-- ========================== map End ============================ -->
