peparing site for production

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -180,8 +180,8 @@
         >
           <div class="mb-0">
             <a href="index.html" class="cursor-big">
-              <img src="assets/images/logo/logo3.png" alt=""
-            /></a>
+              <img src="assets/images/logo/logo3.png" alt="" width="200" />
+            </a>
           </div>
           <p class="text--white text-line-1 fw-normal cursor-small">
             © <%= new Date().getFullYear() %> Logistic Service. All rights
