made some updates

--- a/views/layouts/nav-home.ejs
+++ b/views/layouts/nav-home.ejs
@@ -245,7 +245,7 @@
              >
            </li>
            <li
-             class="nav-menu__item position-relative activePage"
+             class="nav-menu__item position-relative"
            >
              <a
                href="/project"
@@ -254,7 +254,7 @@
              >
            </li>
            <li
-             class="nav-menu__item position-relative activePage"
+             class="nav-menu__item position-relative"
            >
              <a
                href="/team"
